--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(Modern_C)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
 
 add_executable(challenge_1 src/challenge_1.c)
+add_executable(challenge_2 src/challenge_2.c)
