--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,5 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
 
 add_executable(challenge_1 src/challenge_1.c)
 add_executable(challenge_2 src/challenge_2.c)
+
+add_executable(challenge_4 src/challenge_4.c)
